# bvr-nexus

./: .env.example  .gitignore  .pre-commit-config.yaml  BVR_Nexus_Activity_Report_2026-07-01.md  BVR_Nexus_Implementation_Architecture.md  BVR_Nexus_Revised_Architecture_v2.md  BVR_Nexus_v2_AUDIT_REPORT.md  BVR_Nexus_v2_AUDIT_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  docker-compose.override.yml  docker-compose.phase1.yml  docker-compose.phase1.yml.bak2  docker-compose.phase1.yml.before-port-change  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
ai-gateway/: .dockerignore  Dockerfile  main.py  requirements.txt
api/: Dockerfile  auth.py  init.sql  main.py  middleware.py  requirements.txt
argocd/: bvr-nexus-app.yaml
bvr-cli/: Dockerfile  main.py  requirements.txt
bvr-sdk/: .dockerignore  requirements.txt  setup.py
contracts/: artifact.yaml  capability_registry.yaml  constitution.yaml  entity.yaml  execution.yaml  goal.yaml  integration.yaml  operation.yaml  result.yaml  workflow.yaml
docs/: api.md  architecture.md  deployment.md  dns-setup.md  known-limitations.md  plugin-development.md  runbook.md  upgrade.md
gateway/: traefik.prod.yml  traefik.yml
k8s/: 00-namespace.yaml  01-configmap.yaml  02-pvcs.yaml  03-postgres.yaml  03b-db-migrate.yaml  04-redis.yaml  05-minio.yaml  06-opa.yaml  07-vault.yaml  08-kestra.yaml  08-ollama.yaml  08b-keycloak.yaml  09-jaeger.yaml  10-bvr-api.yaml  11-ai-gateway.yaml  12-bvr-workers.yaml  13-ingressroute.yaml  14-prometheus.yaml  15-grafana.yaml  16-loki.yaml  17-traefik.yaml  18-redis-exporter.yaml  19-ops-console.yaml  20-public-site.yaml  21-public-metrics.yaml  create-secrets.sh  (+9 more)
(+131 files in other folders)
