[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bvr-nexus"
version = "2.0.0"
description = "BVR Nexus — Declarative Workflow Orchestration Platform"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
exclude = ["venv", "__pycache__", "*.egg-info", "bvr-sdk/bvr_sdk/pb"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | venv
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
exclude = ["venv/", "tests/"]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101", "B311"]
